remove left over code