@@ -1,5 +1,6 @@
 package fuzs.goldenagecombat.handler;
 
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Multimap;
 import fuzs.goldenagecombat.GoldenAgeCombat;
 import fuzs.goldenagecombat.config.ServerConfig;
@@ -18,17 +19,18 @@ import java.util.UUID;
 public class AttackAttributeHandler {
     public static final UUID BASE_ATTACK_DAMAGE_UUID = ItemAccessor.goldenagecombat$getBaseAttackDamageUUID();
     private static final String ATTACK_DAMAGE_MODIFIER_NAME = GoldenAgeCombat.id("attack_damage_modifier").toString();
-    private static final Map<Class<?>, Double> ATTACK_DAMAGE_BONUS_OVERRIDES = Map.of(SwordItem.class, 4.0, AxeItem.class, 3.0, PickaxeItem.class, 2.0, ShovelItem.class, 1.0, HoeItem.class, 4.0);
+    private static final Map<Class<? extends TieredItem>, Double> ATTACK_DAMAGE_BONUS_OVERRIDES = ImmutableMap.of(SwordItem.class, 4.0, AxeItem.class, 3.0, PickaxeItem.class, 2.0, ShovelItem.class, 1.0, HoeItem.class, 4.0);
 
     public static void onItemAttributeModifiers(ItemStack stack, EquipmentSlot equipmentSlot, Multimap<Attribute, AttributeModifier> attributeModifiers, Multimap<Attribute, AttributeModifier> originalAttributeModifiers) {
         if (!GoldenAgeCombat.CONFIG.getHolder(ServerConfig.class).isAvailable()) return;
         // don't change items whose attributes have already been changed via the nbt tag
         if (equipmentSlot == EquipmentSlot.MAINHAND && (!stack.hasTag() || !stack.getTag().contains("AttributeModifiers", Tag.TAG_LIST))) {
-            if (!trySetNewAttributeValue(stack, attributeModifiers, Attributes.ATTACK_DAMAGE, BASE_ATTACK_DAMAGE_UUID, ATTACK_DAMAGE_MODIFIER_NAME, GoldenAgeCombat.CONFIG.get(ServerConfig.class).attributes.attackDamageOverrides)) {
-                if (GoldenAgeCombat.CONFIG.get(ServerConfig.class).attributes.oldAttackDamage) {
-                    for (Map.Entry<Class<?>, Double> entry : ATTACK_DAMAGE_BONUS_OVERRIDES.entrySet()) {
+            if (!trySetNewAttributeValue(stack, attributeModifiers, Attributes.ATTACK_DAMAGE, BASE_ATTACK_DAMAGE_UUID, ATTACK_DAMAGE_MODIFIER_NAME, GoldenAgeCombat.CONFIG.get(ServerConfig.class).attackDamageOverrides)) {
+                if (GoldenAgeCombat.CONFIG.get(ServerConfig.class).oldAttackDamage) {
+                    for (Map.Entry<Class<? extends TieredItem>, Double> entry : ATTACK_DAMAGE_BONUS_OVERRIDES.entrySet()) {
                         if (entry.getKey().isInstance(stack.getItem())) {
-                            setNewAttributeValue(attributeModifiers, Attributes.ATTACK_DAMAGE, BASE_ATTACK_DAMAGE_UUID, ATTACK_DAMAGE_MODIFIER_NAME, entry.getValue());
+                            setNewAttributeValue(attributeModifiers, Attributes.ATTACK_DAMAGE, BASE_ATTACK_DAMAGE_UUID, ATTACK_DAMAGE_MODIFIER_NAME, ((TieredItem) stack.getItem()).getTier().getAttackDamageBonus() + entry.getValue());
+                            break;
                         }
                     }
                 }
